--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,5 @@
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
+Simon Kamundia <simonkamundia8@gmail.com>
+Nicole Kagendo <kagendonikki16@gmail.com>
